# repo-cleanroom

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_STATE.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  safety_review.yml
.github/workflows/: ci.yml  publish.yml
docs/: APPROVAL_TOKEN.md  CLEANER_SAFETY_MODEL.md  CLEANUP_PLAN_SCHEMA.md  COMMAND_EVIDENCE_PRIVACY.md  CONFIG.md  PERFORMANCE.md  PROJECT_STATE_ADDENDUM_v0.1.2.md  PROJECT_STATE_ADDENDUM_v0.1.3.md  PROJECT_STATE_ADDENDUM_v0.1.4.md  PUBLISHING.md  RELEASE_POLICY.md  ROADMAP.md  SAFETY_MODEL.md  SAMPLE_SCAN_EVIDENCE.md  SCHEMA_STABILITY.md  THREAT_MODEL.md  USAGE.md  WINDOWS_QUICKSTART.md  WINDOWS_QUICKSTART_TRANSCRIPT.md
examples/sample-plan/: cleanup_plan.json  cleanup_plan.md
examples/sample-scan/: artifact_inventory.json  findings.md  inventory.json  public_safety_check.json  (+1 more)
scripts/: benchmark_scan.py  bootstrap_windows_repo.ps1  local_validate.ps1
tests/: test_artifact_detector.py  test_attestation.py  test_benchmark.py  test_clean_command.py  test_clean_recovery.py  test_cli.py  test_demo_workspace.py  test_docker_plan.py  test_docker_scan.py  test_evidence_command.py  test_html_report.py  test_manifest_detector.py  test_markdown_report.py  test_path_guard.py  test_plan_command.py  test_plan_markdown.py  test_plan_schema.py  test_repo_scan.py  test_report_schema.py  test_safety_audit.py  test_scan_config.py  test_secret_guard.py  test_verify_command.py
(+36 files in other folders)
